@@ -15,11 +15,10 @@ import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
 
-
 import java.util.*;
 
 /*
-   Copyright 2002-2016 Bo Zimmerman
+   Copyright 2016-2016 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -33,45 +32,36 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class IndoorWaterSurface extends WaterSurface implements Drink
+public class SaltWaterSurfaceColumn extends WaterSurfaceColumn
 {
 	@Override
 	public String ID()
 	{
-		return "IndoorWaterSurface";
+		return "SaltWaterSurfaceColumn";
 	}
 
-	public IndoorWaterSurface()
+	public SaltWaterSurfaceColumn()
 	{
 		super();
-		name="the water";
-		recoverPhyStats();
-		climask=Places.CLIMASK_WET;
-	}
-
-	@Override
-	public int domainType()
-	{
-		return Room.DOMAIN_INDOORS_WATERSURFACE;
 	}
 
 	@Override
 	protected String UnderWaterLocaleID()
 	{
-		return "IndoorUnderWaterGrid";
-	}
-
-	@Override
-	protected int UnderWaterDomainType()
-	{
-		return Room.DOMAIN_INDOORS_UNDERWATER;
+		return "UnderSaltWaterColumnGrid";
 	}
 
 	@Override
 	protected boolean IsUnderWaterFatClass(Room thatSea)
 	{
-		return (thatSea instanceof IndoorUnderWaterGrid)
-			 ||(thatSea instanceof IndoorUnderWaterThinGrid)
-			 ||(thatSea instanceof IndoorUnderWaterColumnGrid);
+		return (thatSea instanceof UnderSaltWaterGrid) 
+			|| (thatSea instanceof UnderSaltWaterColumnGrid) 
+			|| (thatSea instanceof UnderSaltWaterThinGrid);
+	}
+
+	@Override
+	public List<Integer> resourceChoices()
+	{
+		return UnderSaltWater.roomResources;
 	}
 }
