@@ -4,6 +4,7 @@ import com.planet_ink.coffee_mud.core.*;
 import com.planet_ink.coffee_mud.core.collections.*;
 import com.planet_ink.coffee_mud.Abilities.interfaces.*;
 import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.GridZones.XYVector;
 import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
 import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
 import com.planet_ink.coffee_mud.Commands.interfaces.*;
@@ -12,14 +13,14 @@ import com.planet_ink.coffee_mud.Exits.interfaces.*;
 import com.planet_ink.coffee_mud.Items.interfaces.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.GridLocale.CrossExit;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
-
 
 import java.util.*;
 
 /*
-   Copyright 2002-2016 Bo Zimmerman
+   Copyright 2016-2016 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -33,45 +34,23 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class IndoorWaterSurface extends WaterSurface implements Drink
+public class UnderSaltWaterColumnGrid extends UnderWaterColumnGrid
 {
 	@Override
 	public String ID()
 	{
-		return "IndoorWaterSurface";
+		return "UnderSaltWaterColumnGrid";
 	}
 
-	public IndoorWaterSurface()
+	public UnderSaltWaterColumnGrid()
 	{
 		super();
-		name="the water";
-		recoverPhyStats();
-		climask=Places.CLIMASK_WET;
 	}
 
 	@Override
-	public int domainType()
+	public String getGridChildLocaleID()
 	{
-		return Room.DOMAIN_INDOORS_WATERSURFACE;
+		return "UnderSaltWater";
 	}
 
-	@Override
-	protected String UnderWaterLocaleID()
-	{
-		return "IndoorUnderWaterGrid";
-	}
-
-	@Override
-	protected int UnderWaterDomainType()
-	{
-		return Room.DOMAIN_INDOORS_UNDERWATER;
-	}
-
-	@Override
-	protected boolean IsUnderWaterFatClass(Room thatSea)
-	{
-		return (thatSea instanceof IndoorUnderWaterGrid)
-			 ||(thatSea instanceof IndoorUnderWaterThinGrid)
-			 ||(thatSea instanceof IndoorUnderWaterColumnGrid);
-	}
 }
