@@ -567,9 +567,27 @@ water perhaps</td>
       <td>under an underground lake</td>
     </tr>
     <tr>
+      <td>IndoorUnderWaterColumnGrid</td>
+      <td>tall narrow under water indoor rooms </td>
+    </tr>
+    <tr>
+      <td>IndoorUnderWaterGrid</td>
+      <td>grid of under water indoor rooms </td>
+    </tr>
+    <tr>
       <td>IndoorWaterSurface</td>
       <td>on the surface of an
 underground lake</td>
+    </tr>
+    <tr>
+      <td>IndoorWaterThinSurface</td>
+      <td>on the surface of an
+underground lake that uses less memory</td>
+    </tr>
+    <tr>
+      <td>IndoorWaterSurfaceColumn</td>
+      <td>on the surface of an
+tall narrow underground lake</td>
     </tr>
     <tr>
       <td>InTheAir</td>
@@ -700,6 +718,10 @@ less memory, more cpu</td>
       <td>the surface of the ocean</td>
     </tr>
     <tr>
+      <td>SaltWaterSurfaceColumn</td>
+      <td>the narrow surface of the ocean</td>
+    </tr>
+    <tr>
       <td>SaltWaterThinSurface</td>
       <td>as SaltWaterSurface but
 depths use less memory/more cpu</td>
@@ -800,6 +822,11 @@ ClimbableSurface, such as the trunk of a tree</td>
 beneath the ocean</td>
     </tr>
     <tr>
+      <td>UnderSaltWaterColumnGrid</td>
+      <td>a multi-room place
+beneath the ocean where every room is down</td>
+    </tr>
+    <tr>
       <td>UnderSaltWaterMaze</td>
       <td>a multi-room 2D maze
 beneath the ocean</td>
@@ -820,6 +847,11 @@ unless you are a fish you won't live long</td>
 underwater locale</td>
     </tr>
     <tr>
+      <td>UnderWaterColumnGrid</td>
+      <td>a multi-room
+underwater locale straight up and down</td>
+    </tr>
+    <tr>
       <td>UnderWaterThinGrid</td>
       <td>as UnderWaterGrid but
 using less memory/more cpu</td>
@@ -832,6 +864,11 @@ of underwater locales -- be careful!</td>
     <tr>
       <td>WaterSurface</td>
       <td>the surface of a lake or
+river</td>
+    </tr>
+    <tr>
+      <td>WaterSurfaceColumn</td>
+      <td>the narrow surface of a lake or
 river</td>
     </tr>
     <tr>
