@@ -2,6 +2,7 @@
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
    3. STAT [ITEMNAME/AREANAME/EXITNAME/ROOMNAME] now gives editor stats without editing
+   4. New Locales: WaterSurfaceColumn and UnderWaterColumnGrid, and Salt water varieties.
 
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
